# ghost-store-generator-server

./: .gitignore  README.md  api.py  cli.py  config.py  main.py  mongodb_service.py  pyproject.toml  requirements.txt  requirements.txt.bak
analyzer/: expression.py  library.py  manuscript_generator.py  morpheme.py  parameter.py  sentence.py  template.py
data/: 걸밴크 나무위키.txt  봇치더락 나무위키.txt  악마정보_너희들의 인생 최대 공포 체험 들려줘라_1.txt  악마정보_너희들의 인생 최대 공포 체험 들려줘라_2.txt  악마정보_너희들의 인생 최대 공포 체험 들려줘라_3.txt  케이온 나무위키.txt  코바야시네메이드래곤 나무위키.txt
llm/: claude_service.py  gemini_service.py  gpt_service.py
prompts/: get_ko_prompt.py  get_my_ko_prompt.py  get_ref.py
utils/: categorize_keyword_with_ai.py
