[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-analyzer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A CLI tool to analyze blog posts and generate manuscripts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "click==8.1.8",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "jpype1==1.6.0",
    "konlpy==0.6.0",
    "lxml==6.0.0",
    "numpy==2.0.2",
    "packaging==25.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "kss",
    "pymongo==4.8.0"
]

[project.scripts]
blog-analyzer = "cli:cli"
